Closed Bug 1618034 Opened 6 years ago Closed 5 years ago

Google Translate output defaults to "Other Writing Systems"

Categories

(Core :: Internationalization, defect, P3)

73 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: erwinm, Assigned: jfkthame)

References

Details

Attachments

(5 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:73.0) Gecko/20100101 Firefox/73.0

Steps to reproduce:

I used Google Translate.

I currently have Andika set for Roman and Cyrillic script, Skeirs for other writing systems.

Actual results:

English output appears in Skeirs, converted to the Gothic alphabet.

Testing with gallica.bnf.fr, this also occurs when the source text uses the Roman alphabet.

Expected results:

English output should appear in Andika, using the Roman alphabet.

To test:

Switch the font preferences for "Other Writing Systems" to a distinctive font, different from your usual font(s), and do not allow sites to override. Then run Google Translate.

Hi MarjaE,

Thanks for the report. Can you please an attachment demonstrating the issue?

Are you updating the font preferences within username > library > fonts? Or within Macintosh HD > Library > fonts, Or from Macintosh HD > system > library > fonts ?

Please confirm so that I can try to replicate the issue on my end.

Thanks in advance.

Best,

Clara

Flags: needinfo?(erwinm)

In Preferences > Fonts > Advanced

Flags: needinfo?(erwinm)

Great MarjaE,

Which add-on are you using? I've installed https://addons.mozilla.org/es/firefox/addon/google-translator-for-firefox/ and https://addons.mozilla.org/es/firefox/addon/to-google-translate/ however I am not able to find Cyrillic in the settings (see attachment)

I also installed https://fonts.google.com/specimen/Andika, which I am able to choose within firefox, preferences > fonts > advance

Please let me know which step I am missing in order to replicate your issue. Can you also provide the link from your attachment?

In the meantime I will move this over to a component so developers can take a look over it. If is not the correct component please feel free to change it to an appropriate one.

Thanks for the report.

Best regards, Clara.

Flags: needinfo?(erwinm)
Component: Untriaged → Layout: Text and Fonts
Product: Firefox → Core

I was using gallica.bnf.fr as a convenient sample (It has an English page, so I didn't need Google translate there...). It ends up with Andika about 2/3 of the time, Skeirs about 1/3. I can't predict when.

I am using dozens of add-ons, some about:config fixes, some user css, mostly for safety. I am not aware of any easy way to list them.

Flags: needinfo?(erwinm)

(In reply to MarjaE from comment #1)

To test:

Switch the font preferences for "Other Writing Systems" to a distinctive font, different from your usual font(s), and do not allow sites to override. Then run Google Translate.

MarjaE, could you please clarify exactly what you mean by "run Google Translate". I don't know of a built-in/standard way to do this; is there a particular add-on you're using for it? Which one?

To report more about your setup, so we can try to reproduce the problem, please go to about:support (or the Help / Troubleshooting Information menu item), and then use the "Copy text to clipboard" button and paste the report here. Thank you.

Flags: needinfo?(erwinm)

Either Simple Google Translate, or opening Google Translate, and posting a link into the box, and clicking the link on the translated side. It also helps to click a further link to get away from the headers.

Lately they've been loading with Skeirs, flashing, and then re-loading with Andika.

Flags: needinfo?(erwinm)

I haven't been able to reproduce this problem yet. I tried to apply Google Translate to the French version of gallica.bnf.fr, but for some reason I just end up in a repeated Google recaptcha loop, and can't get the translated page. I did use Translate successfully with a number of other sites, but I'm just seeing the default Western fonts (Times, Helvetica), not the alternative fonts that I've set for "Other Writing Systems" in the Firefox prefs.

So it's not clear to me why you're experiencing this. Could you attach your about:support data, so we can see if anything there looks relevant?

Flags: needinfo?(erwinm)
Attached file about support data
Flags: needinfo?(erwinm)

The priority flag is not set for this bug.
:jfkthame, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jfkthame)

OK, I think I see what's going on here, at least in part. It appears that Google Translate initially serves the page with a root element such as <html lang=en-x-mtfrom-it> (from an Italian example I tried). To look up font prefs, we depend on intl::Locale to parse the lang tag in nsLanguageAtomService::GetUncachedLanguageGroup; the presence of the private extension subtag breaks this, with the result that we don't correctly recognize the language/script and fall back to x-unicode, which maps to the "Other writing systems" font prefs.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?(jfkthame)
Priority: -- → P3
Component: Layout: Text and Fonts → Internationalization
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
See Also: → 1632302
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/961700e5d48a Strip private subtags in nsLanguageAtomService::GetUncachedLanguageGroup so that we can parse the standard subtags and use the proper font prefs. r=zbraniecki
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
See Also: → 1633627
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: